--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
                         </ul>
                     </nav>
                     <div class="hdr_link">
-                        <a href="#"> <i class="fab fa-facebook-square"></i></a>
-                        <a href="#"> <i class="fab fa-instagram-square"></i></a>
-                        <a href="#"> <i class="fab fa-github"></i></a>
-                        <a href="#"> <i class="fab fa-linkedin"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100043294877459" target="_blank"> <i class="fab fa-facebook-square"></i></a>
+                        <a href="https://www.instagram.com/" target="_blank"> <i class="fab fa-instagram-square"></i></a>
+                        <a href="https://github.com/Shuyibe48" target="_blank"> <i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/" target="_blank"> <i class="fab fa-linkedin"></i></a>
                     </div>
                 </div>
             </div>
@@ -47,7 +47,7 @@
                     <div class="sldr_msg">
                         <h1><span>skip</span> the diet, just eat healthy with food network</h1>
                         <p>imagne you don't need a diet because we provide healthy delicious food for you!</p>
-                        <a class="cmn_btn" href="#">order food</a>
+                        <a class="cmn_btn" href="https://www.foodnetwork.com/" target="_blank">order food</a>
                     </div>
                     <div class="sldr_img">
                         <img src="slider_img.jpg" alt="slider image">
@@ -69,7 +69,7 @@
                 <dib class="abt_msg">
                     <h1>about me</h1>
                     <p>Food Network is an online food and grocery delivery platform brand owned by Delivery Hero, which is headquartered in Berlin, Germany and operates with 20 brands in about 50 countries across four continents. The Food Network brand, currently used in Asia, Bulgaria and Romania, was acquired by Delivery Hero in July 2021. Wikipedia</p>
-                    <a class="cmn_btn" href="#">contact me</a>
+                    <a class="cmn_btn" href="https://www.foodnetwork.com/" target="_blank">contact me</a>
                 </dib>
             </div>
         </div>
