--- a/index.html
+++ b/index.html
@@ -128,6 +128,24 @@
 
     <footer>
         <div class="contener">
+            <div class="contact">
+                <div class="cntc_frm">
+                    <form action="#">
+                        <p>Put yoru email into the box. Our support team will contact you.</p>
+                        <label for="eml">Drop your email</label><br>
+                        <input id="eml" type="email" placeholder="Drope your Email">
+                    </form>
+                </div>
+                <div class="or_cntc_frm">
+                    <p><small>Phone :</small> 016######51</p>
+                    <p><small>Tel :</small> 693456783</p>
+                    <p id="em"><small>Email :</small> foodnetwork@gamil.com</p>
+                    <a href="https://www.facebook.com/profile.php?id=100043294877459" target="_blank"> <i class="fab fa-facebook-square"></i></a>
+                    <a href="https://www.instagram.com/" target="_blank"> <i class="fab fa-instagram-square"></i></a>
+                    <a href="https://github.com/Shuyibe48" target="_blank"> <i class="fab fa-github"></i></a>
+                    <a href="https://www.linkedin.com/" target="_blank"> <i class="fab fa-linkedin"></i></a>
+                </div>
+            </div>
             <div class="main_footer">
                 <h3><span>food</span> network</h3>
                 <p>eat healthy to live healthy. live helthy to life happy.</p>
