--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                         <p>Put yoru email into the box. Our support team will contact you.</p>
                         <label for="eml">Drop your email</label><br>
                         <input id="eml" type="email" placeholder="Drope your Email">
+                        <a class="cmn_btn" href="https://www.foodnetwork.com/" target="_blank">submit</a>
                     </form>
                 </div>
                 <div class="or_cntc_frm">
